--- a/templates/actions/settings/Settings.html
+++ b/templates/actions/settings/Settings.html
@@ -18,15 +18,39 @@
     .plugin-menu li a{
         text-decoration: underline;
     }
+    div.geshifilter {
+        background-color: #f8f8f8;
+        border: 1px solid #ccc;
+        color: #222;
+        display: block;
+        line-height: 1.3;
+        margin: 0.5em;
+        overflow: auto;
+        padding: 0.5em;
+    }
+    .plugin-links{
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+    .plugin-links li{
+        margin: 5px 0;
+        font-weight: bold;
+    }
+    .inline-block{
+        display: inline-block;
+    }
 </style>
-<h1>Скидка от количества</h1>
+<div>
+    <h1 class="inline-block">Скидка от количества</h1>
 
-<ul class="plugin-menu">
-    <li><a href="mailto:support@wa-plugins.ru"><i class="icon16 ss pt hammer"></i>Поддержка</a></li>
-</ul>
+    <ul class="plugin-menu">
+        <li><a href="mailto:support@wa-plugins.ru"><i class="icon16 ss pt hammer"></i>Поддержка разработчика плагина</a></li>
+    </ul>
+</div>
 
 <div class="fields form">
-    <form action="?plugin=qdiscount&action=saveSettings" method="post" id="plugins-settings-form">
+    <form action="?module=plugins&id=qdiscount&action=save" method="post" id="plugins-settings-form_">
         {$wa->csrf()}
         <div class="field-group">
             <div class="field">
@@ -40,53 +64,30 @@
             </div>
         </div>
 
-
-        <div class="field-group"{if !$settings.status} style="display:none;"{/if}>
+        <div class="field-group"{if !$settings.status} style="display:none"{/if}>
             <div class="field">
                 <div class="name">
-                    Вывод информации о скидке в карточке товара
-                </div>
-                <div class="value no-shift s-ibutton-checkbox">
-                    <input type="hidden" name="shop_qdiscount[frontend_product]" value="0">
-                    <input type="checkbox" class="ibutton-status" name="shop_qdiscount[frontend_product]" value="1"{if $settings.frontend_product} checked{/if}>
-                    <p class="hint">Для размещения плагина в произовльном месте используйте хелпер вывода {literal}{shopQdiscountPlugin::display($product)}{/literal}</p>
-                </div>
-            </div>
-
-            <div class="field"{if !$settings.frontend_product} style="display:none;"{/if}>
-                <div class="name">
-                    Место вывода
+                    Выберите поселение
                 </div>
                 <div class="value">
-                    <select name="shop_qdiscount[frontend_product_output]">
-                        <option {if $settings.frontend_product_output == 'cart'} selected="selected"{/if} value="cart">Содержимое, добавляемое рядом с кнопкой «В корзину».</option>
-                        <option {if $settings.frontend_product_output == 'block_aux'} selected="selected"{/if} value="block_aux">Блок дополнительной информации в боковой части страницы.</option>
-                        <option {if $settings.frontend_product_output == 'block'} selected="selected"{/if} value="block">Блок дополнительной информации в основной части описания товара.</option>
+                    <select name="route_hash" id="route-selector">
+                        <option value="0">Общие настройки для всех поселений</option>
+                        {foreach $route_hashs as $route_url => $route_hash}
+                            <option value="{$route_hash}"{if $route_hash == $settings.route_hash|default:0} selected="selected"{/if}>{$route_url}</option>
+                        {/foreach}
                     </select>
+
                 </div>
             </div>
         </div>
 
+        <div class="field-group"{if !$settings.status} style="display:none"{/if}>
+            <div class="route-container block double-padded">
+
+            </div>
+        </div>
 
         <div class="field-group"{if !$settings.status} style="display:none;"{/if}>
-            {foreach from=$templates key=key item=template}
-                <div class="field">
-                    <div class="name">{$template.name}<br /><span class="hint">HTML + Smarty</span></div>
-                    <div class="value no-shift">
-                        <div id="s-editor-core-wrapper">
-                            <textarea id="sf-template-{$key}"  class="body" name="templates[{$key}]">{$template.template|escape}</textarea>
-                        </div>
-                    </div>
-
-                    {if $template.change_tpl}
-                        <div class="value">
-                            <p class="gray"><i class="icon16 exclamation"></i>Внимание! Шаблон по умолчанию был изменен</p>
-                            <input type="checkbox" name="reset_tpls[{$key}]" value="1"  /> - Сбросить изменения, использовать шаблон по умолчанию
-                        </div>
-                    {/if}
-                </div>
-            {/foreach}
-
             <div class="field">
                 <div class="value submit">
                     <input type="submit" class="button green" value="Сохранить">
@@ -99,66 +100,17 @@
     </form>
 </div>
 
+
+{$tpls = []}
+{foreach $templates as $key => $template}
+    {$count = array_push($tpls, "'sf-template-`$key`'")}
+{/foreach}
+<script type="text/javascript" src="{$wa_app_static_url}plugins/qdiscount/js/settings.js?{$wa->version()}"></script>
 <script type="text/javascript">
     $(function () {
-        $('#ibutton-status').iButton({
-            labelOn: "", labelOff: "", className: 'mini'
-        }).change(function () {
-            var self = $(this);
-            var enabled = self.is(':checked');
-            if (enabled) {
-                self.closest('.field-group').siblings().show(200);
-            } else {
-                self.closest('.field-group').siblings().hide(200);
-            }
-            var f = $("#plugins-settings-form");
-            $.post(f.attr('action'), f.serialize());
+        $.qdiscount_settings.init({
+            ids: [{implode(',', $tpls)}]
         });
-        $('.ibutton-status').iButton({
-            labelOn: "", labelOff: "", className: 'mini'
-        }).change(function () {
-            var self = $(this);
-            var enabled = self.is(':checked');
-            if (enabled) {
-                self.closest('.field').siblings().show(200);
-            } else {
-                self.closest('.field').siblings().hide(200);
-            }
-            var f = $("#plugins-settings-form");
-            $.post(f.attr('action'), f.serialize());
-        });
-
-        var ids = ["sf-template-FrontendProduct"];
-        for (var i = 0; i < ids.length; i++) {
-
-            var c = CodeMirror.fromTextArea(document.getElementById(ids[i]), {
-                mode: "text/html",
-                tabMode: "indent",
-                height: "dynamic",
-                lineWrapping: true
-            });
-            $(ids[i]).change(function () {
-                c.setValue($(this).val())
-            });
-            $(ids[i]).submit(function () {
-                var f = $(this);
-                $.post(f.attr('action'), f.serialize(), function (response) {
-                    if (response.status == 'ok') {
-                        $('#wa-design-button').removeClass('red').addClass('green');
-                        $("#wa-editor-status-fail").hide()
-                        $("#wa-editor-status-ok span").html(response.data.message);
-                        $("#wa-editor-status-ok").fadeIn('slow', function () {
-                            $(this).fadeOut(1000);
-                        });
-                    } else {
-                        $('#wa-design-button').removeClass('green').addClass('red');
-                        $("#wa-editor-status-ok").hide();
-                        $("#wa-editor-status-fail span").html(response.errors.join(', '));
-                        $("#wa-editor-status-fail").fadeIn('slow');
-                    }
-                }, "json")
-                return false;
-            });
-        }
     });
 </script>
+
