--- a/templates/actions/backend/Backend.html
+++ b/templates/actions/backend/Backend.html
@@ -1,79 +1,67 @@
-<script type="text/javascript" src="{$wa_app_static_url}plugins/qdiscount/js/qdiscount.js"></script>
-<input type="hidden" name="qdiscount_product_id" value="{$product.id}" />
+<input type="hidden" name="qdiscount_backend_save" value="1" />
 
 <div class="fields form">
-
-    <div class="field-group">
-        <div class="field">
-            <div class="name">
-                Единицы измерения количества
-            </div>
-            <div class="value">
-                <input type="text" name="product[qdiscount_units]" value="{$product.qdiscount_units|escape}" placeholder="шт."/>
-            </div>
-        </div>
-    </div>
-
-    <div class="field-group">
-        <div class="field">
-            <div class="name">
-                Зависимость цены от количества
-            </div>
-            <div class="value">
-                <table id="qdiscount-table" class="zebra" style="width: auto;">
-                    <thead>
-                        <tr>  
-                            <th>Поселение</th>
-                            <th>Артикул</th>
-                            <th>Количество</th>
-                            <th>Стоимость</th>
-                            <th>Удалить</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {foreach $items as $item}
-                            <tr>
-                                <td>
-                                    <select name="qdiscount_route_hash[]">
-                                        <option value="0">Общие настройки для всех поселений</option>
-                                        {foreach $route_hashs as $route_url => $route_hash}
-                                            <option value="{$route_hash}"{if $route_hash == $item.route_hash|default:'0'} selected="selected"{/if}>{$route_url}</option>
-                                        {/foreach}
-                                    </select>
-                                </td>
-                                <td class="min-width">
-                                    <input type="hidden" name="qdiscount_id[]" value="{$item.id}" />
-                                    <select name="qdiscount_sku[]">
-                                        {foreach $product.skus as $sku}
-                                            <option {if $item.sku_id == $sku.id}selected="selected"{/if} value="{$sku.id}">{$sku.sku|default:'По умолчанию'}{if $sku.name}({$sku.name}){/if}</option>
-                                        {/foreach}
-                                    </select>
-                                </td>
-                                <td class="min-width">
-                                    <input type="text" value="{$item.count|escape}" class="large bold" name="qdiscount_count[]">
-                                </td>
-                                <td>
-                                    <input type="text" value="{(float)$item.price|escape}" class="large bold" name="qdiscount_price[]">
-                                    <span class="large bold overhanging">
-                                        {$product.currency}
-                                    </span>
-                                </td>
-                                <td>
-                                    <a class="delete-row" href="#"><i class="icon16 delete"></i></a>
-                                </td>
-                            </tr>
-                        {/foreach}
-                    </tbody>
-                </table>
-                <a class="inline-link add-row" href="#"><i class="icon16 add"></i><b><i>Добавить</i></b></a>
-            </div>
-        </div>
-    </div>
-
+    <table id="qdiscount-table" class="table zebra">
+        <thead>
+            <tr>  
+                <th>Поселение</th>
+                <th>Артикул</th>
+                <th>Количество</th>
+                <th>Тип скидки</th>
+                <th>Скидка</th>
+                <th>Удалить</th>
+            </tr>
+        </thead>
+        <tbody>
+            {foreach $items|default:[] as $item}
+                <tr>
+                    <td class="min-width">
+                        <select name="qdiscount_route_hash[]">
+                            <option value="0">Общие настройки для всех поселений</option>
+                            {foreach $route_hashs as $route_url => $route_hash}
+                                <option value="{$route_hash}"{if $route_hash == $item.route_hash|default:'0'} selected="selected"{/if}>{$route_url}</option>
+                            {/foreach}
+                        </select>
+                    </td>
+                    <td class="min-width">
+                        <select name="qdiscount_sku[]">
+                            <option value="0"{if !$item.sku_id} selected="selected"{/if}>Для всех артикулов товара</option>
+                            {if count($product.skus) > 1}
+                                {foreach $product.skus as $sku}
+                                    <option {if $item.sku_id == $sku.id}selected="selected"{/if} value="{$sku.id}">{$sku.sku|default:'По умолчанию'}{if $sku.name}({$sku.name}){/if}</option>
+                                {/foreach}
+                            {/if}
+                        </select>
+                    </td>
+                    <td class="min-width">
+                        <input class="short numerical bold" type="text" value="{$item.count|escape}"name="qdiscount_count[]" placeholder="0">
+                    </td>
+                    <td class="min-width">
+                        <select name="qdiscount_type[]">
+                            <option value="new_price"{if $item.type|default:'new_price' == 'new_price'} selected="selected"{/if}>Новая цена</option>
+                            <option value="currency"{if $item.type|default:'new_price' == 'currency'} selected="selected"{/if}>Скидка в валюте</option>
+                            <option value="percent"{if $item.type|default:'new_price' == 'percent'} selected="selected"{/if}>Скидка в процентах</option>
+                        </select>
+                    </td>
+                    <td>
+                        <input class="short numerical bold" type="text" value="{(float)$item.price|escape}" class="large bold" name="qdiscount_price[]" placeholder="0">
+                        <select class="qdiscount-currency" name="qdiscount_currency[]"{if $item.type|default:'new_price' == 'percent'} style="display:none;"{/if}>
+                            <option value="">Валюта товара</option>
+                            {foreach $currencies as $currency}
+                                <option value="{$currency.code}">{$currency.code}</option>
+                            {/foreach}
+                        </select>
+                        <span class="qdiscount-percent large bold overhanging"{if $item.type|default:'new_price' != 'percent'} style="display:none;"{/if}>%</span>
+                    </td>
+                    <td class="min-width align-right">
+                        <a class="delete-row" href="#"><i class="icon16 cross"></i></a>
+                    </td>
+                </tr>
+            {/foreach}
+        </tbody>
+    </table>
+    <a class="inline-link add-row" href="#"><i class="icon16 add"></i><b><i>Добавить</i></b></a>
 </div>
-
-
-
 
 <script type="text/javascript" src="{$wa_url}wa-content/js/jquery-plugins/jquery.tmpl.min.js"></script>
 {literal}
@@ -88,35 +76,47 @@
         </select>
         </td>
         <td class="min-width">
-        <input type="hidden" name="qdiscount_id[]" value="" />
         <select name="qdiscount_sku[]">
+        <option value="0">Для всех артикулов товара</option>
+        {{if sku_count > 1}}
         {{each skus}}
         <option value="${$value.id}">{{if $value.sku}}${$value.sku}{{else}}По умолчанию{{/if}}{{if $value.name}}(${$value.name}){{/if}}</option>
         {{/each}}
+        {{/if}}
         </select>
         </td>
         <td class="min-width">
-        <input type="text" value="" class="large bold" name="qdiscount_count[]">
+        <input class="short numerical bold" type="text" value="" name="qdiscount_count[]" placeholder="0">
+        </td>
+        <td class="min-width">
+        <select name="qdiscount_type[]">
+        <option value="new_price">Новая цена</option>
+        <option value="currency">Скидка в валюте</option>
+        <option value="percent">Скидка в процентах</option>
+        </select>
         </td>
         <td>
-        <input type="text" value="" class="large bold" name="qdiscount_price[]">
-        <span class="large bold overhanging">
-        ${currency}
-        </span>
+        <input class="short numerical bold" type="text" value="" name="qdiscount_price[]" placeholder="0">
+        <select class="qdiscount-currency" name="qdiscount_currency[]">
+        <option value="">Валюта товара</option>
+        {{each currencies}}
+        <option value="${$value.code}">${$value.code}</option>
+        {{/each}}
+        </select>
+        <span class="qdiscount-percent large bold overhanging" style="display:none;">%</span>
         </td>
-        <td>
-        <a class="delete-row" href="#"><i class="icon16 delete"></i></a>
+        <td class="min-width align-right">
+        <a class="delete-row" href="#"><i class="icon16 cross"></i></a>
         </td>
         </tr>
     </script>
 {/literal}
+<script type="text/javascript" src="{$wa_app_static_url}plugins/qdiscount/js/backend/product.js"></script>
 <script type="text/javascript">
     $.product_qdiscount.init({
-        container: '.s-product-form.qdiscount',
-        counter: '#s-product-edit-menu li.qdiscount span.hint',
-        product_id: {$product.id},
-        currency: '{$product.currency}',
-        skus: {json_encode($product.skus)},
+        currencies: {json_encode($currencies)},
+        skus: {json_encode($product.skus|default:[])},
+        sku_count: {count($product.skus|default:[])},
         route_hashs: {json_encode($route_hashs)}
     });
 </script>
