--- a/templates/actions/settings/SettingsRoute.html
+++ b/templates/actions/settings/SettingsRoute.html
@@ -43,23 +43,88 @@
             </p>
         </div>
     </div>
-</div>
-
-{$key = 'FrontendProduct'}
-{$template = $templates[$key]}
-<div class="field-group">
     <div class="field">
         <div class="name">
-            {$template.name|default:'Шаблон'}<br /><span class="hint">HTML + Smarty</span>
+            Селектор формы в карточке товара
         </div>
-        <div class="value no-shift">
-            <a class="edit-template" href="#"><i class="icon16 edit"></i>Изменить шаблон</a><br/><br/>
-            <div class="template-block">
-                <textarea id="sf-template-{$key}" name="templates[{$key}][template]">{$template.template|default:''|escape}</textarea>
-                {if $template.change_tpl|default:0}
-                    <p class="gray"><i class="icon16 exclamation"></i>Внимание! Шаблон по умолчанию был изменен</p>
-                    <input type="checkbox" name="templates[{$key}][reset_tpl]" value="1"  /> - Сбросить изменения, использовать шаблон по умолчанию
-                {/if}
+        <div class="value">
+            <input class="long" name="route_settings[product_form_selector]" value="{$route_settings.product_form_selector|default:'form#cart-form'|escape}" />
+        </div>
+    </div>
+    <div class="field">
+        <div class="name">
+            Селектор цены товара
+        </div>
+        <div class="value">
+            <input class="long" name="route_settings[product_price_selector]" value="{$route_settings.product_price_selector|default:'form#cart-form .add2cart .price'|escape}" />
+        </div>
+    </div>
+    <div class="field">
+        <div class="name">
+            Селектор зачеркнутой цены товара
+        </div>
+        <div class="value">
+            <input class="long" name="route_settings[product_compare_price_selector]" value="{$route_settings.product_compare_price_selector|default:'form#cart-form .add2cart .compare-at-price'|escape}" />
+        </div>
+    </div>
+    <div class="field">
+        <div class="name">
+            Символ рубля для валюты
+        </div>
+        <div class="value no-shift s-ibutton-checkbox">
+            <input type="hidden" name="route_settings[html_currency]" value="0" />
+            <input class="ibutton" type="checkbox"{if $route_settings.html_currency|default:1} checked="checked"{/if} name="route_settings[html_currency]" value="1" />
+            <p class="hint">
+                {shop_currency_html(1)} или {shop_currency(1)}
+            </p>
+        </div>
+    </div>
+    <div class="field">
+        <div class="name">
+            Замена цены
+        </div>
+        <div class="value no-shift s-ibutton-checkbox">
+            <input type="hidden" name="route_settings[price_replace]" value="0" />
+            <input class="ibutton" type="checkbox"{if $route_settings.price_replace|default:1} checked="checked"{/if} name="route_settings[price_replace]" value="1" />
+            <p class="hint">
+                Вместо назначения скидки в корзине, устанавливать новую цену с учетом скидки
+            </p>
+        </div>
+    </div>
+</div>
+
+
+<div class="field-group">
+    <div class="field">
+        <a class="edit-templates" href="#"><i class="icon16 edit"></i>Шаблоны</a>
+    </div>
+
+    <div class="templates-block">
+        {foreach $templates as $key => $template}
+            <div class="field">
+                <div class="name">
+                    {$template.name}<br /><span class="hint">HTML + Smarty</span>
+                </div>
+                <div class="value no-shift">
+                    <a class="edit-template" href="#"><i class="icon16 edit"></i>Изменить шаблон</a>
+                    <div class="template-block">
+                        <textarea id="sf-template-{$key}"  class="body" name="templates[{$key}][template]">{$template.template|escape}</textarea>
+
+                        {if $template.change_tpl}
+                            <p class="gray"><i class="icon16 exclamation"></i>Внимание! Шаблон по умолчанию был изменен</p>
+                            <input class="reset-tpl" type="checkbox" name="templates[{$key}][reset_tpl]" value="1"  /> - Сбросить изменения, использовать шаблон по умолчанию
+                        {/if}
+
+                    </div>
+                </div>
+            </div>
+        {/foreach}
+        <div class="field">
+            <div class="name">
+                Сбросить изменения во всех шаблонах
+            </div>
+            <div class="value">
+                <input type="checkbox" name="reset_tpl_all" value="1" />
             </div>
         </div>
     </div>
