--- a/templates/actions/settings/Settings.html
+++ b/templates/actions/settings/Settings.html
@@ -69,6 +69,7 @@
                 <div class="value no-shift s-ibutton-checkbox">
                     <input type="hidden" name="shop_qdiscount[status]" value="0">
                     <input type="checkbox" id="ibutton-status" name="shop_qdiscount[status]" value="1"{if $settings.status} checked{/if}>
+                    <p class="hint">Тут можно полностью отключить плагин для всех поселений</p>
                 </div>
             </div>
         </div>
@@ -85,7 +86,16 @@
                             <option value="{$route_hash}"{if $route_hash == $settings.route_hash|default:0} selected="selected"{/if}>{$route_url}</option>
                         {/foreach}
                     </select>
-
+                    <p class="hint">
+                        <strong>Внимательно отнеситесь к выбору верного поселения!</strong> От этого зависит корректность работы плагина.<br/>
+                        Если к сайту привязано только одно поселение, то рекомендуется выбирать в настройках именно это поселение, а не "Общие настройки для всех поселений".<br/>
+                        Если выбрано конкретное поселение, то в настройках скидки от количества в товара, также необходимо выбирать именно это поселение, а не общие настройки.<br/>
+                        И наоборот. Если используются "Общие настройки для всех поселений", то убедитесь, что данные настройки используются, как в настройках плагина, так и в настройках у товаров.<br/>
+                        <strong>
+                            Убедитесь, что при использование "Общие настройки для всех поселений" отключены настройки для конкретного поселения,<br/>
+                            в противном случае они будут иметь приоритет над общими настройками при нахождение посетителя в данном поселение.
+                        </strong>
+                    </p>
                 </div>
             </div>
         </div>
